cmake_minimum_required(VERSION 2.6)
 
PROJECT(Camera)

# VTK 
FIND_PACKAGE(VTK REQUIRED)
INCLUDE(${VTK_USE_FILE})

# Eigen
SET(EIGEN_SEARCH_HEADERS ${SEARCH_HEADERS})
LIST(APPEND EIGEN_SEARCH_HEADERS /usr/include/eigen3) # Ubuntu 10.04's default location.
FIND_PATH(EIGEN_INCLUDE NAMES Eigen/Core PATHS ${EIGEN_SEARCH_HEADERS})
IF (NOT EXISTS ${EIGEN_INCLUDE})
  MESSAGE(FATAL_ERROR "Can't find Eigen. Try passing -DEIGEN_INCLUDE=...")
ENDIF (NOT EXISTS ${EIGEN_INCLUDE})
INCLUDE_DIRECTORIES(${EIGEN_INCLUDE})
 
ADD_EXECUTABLE(Camera Camera.cxx)
 
TARGET_LINK_LIBRARIES(Camera ${VTK_LIBRARIES})
